--- a/pom.xml
+++ b/pom.xml
@@ -1,38 +1,91 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+         
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.diabexpert</groupId>
-    <artifactId>diabexpert-backend</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <!-- Use Spring Boot starter parent -->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.0.0</version>
+        <relativePath/>
+    </parent>
 
-    <name>DiabeXpert Backend</name>
+    <groupId>com.example</groupId>
+    <artifactId>DiabeXpert</artifactId>
+    <version>1.0.0</version>
+    <packaging>jar</packaging>
+    <name>DiabeXpert</name>
+    <description>Diabetes Risk Prediction System</description>
 
     <properties>
         <java.version>17</java.version>
-        <spring-boot.version>3.0.0</spring-boot.version>
+        <spring.boot.version>3.0.0</spring.boot.version>
     </properties>
 
     <dependencies>
+        <!-- Spring Boot Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!-- Spring Boot Test -->
         <dependency>
-            <groupId>com.github.haifengl</groupId>
-            <artifactId>smile-core</artifactId>
-            <version>2.6.0</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+<dependency>
+    <groupId>com.github.haifengl</groupId>
+    <artifactId>smile-core</artifactId>
+    <version>2.6.0</version>
+</dependency>
+<dependency>
+    <groupId>com.github.haifengl</groupId>
+    <artifactId>smile-data</artifactId>
+    <version>2.6.0</version>
+</dependency>
+<dependency>
+    <groupId>com.github.haifengl</groupId>
+    <artifactId>smile-math</artifactId>
+    <version>2.6.0</version>
+</dependency>
+
+        <!-- Commons Codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <!-- Maven Exec Plugin to run ModelTrainer.java -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>com.example.diabexpert.training.ModelTrainer</mainClass>
+                </configuration>
+            </plugin>
+
+            <!-- Spring Boot plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.version}</version>
             </plugin>
         </plugins>
     </build>
